fixed some layout issued for search dialogue

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -33,6 +33,14 @@ body {
   font-style: italic;
 }
 
+#searchDialog input {
+  margin-bottom: 0; /* layout fix for search field */
+}
+
+#searchDialog img {
+  height: 165px;
+}
+
 .clear {
   clear: both;
 }
